[Assignment 1] Added TestDialog, POTO and POSO for Planets and Vehicle

--- a/ProgrammingAssignmentOne-aid/.classpath
+++ b/ProgrammingAssignmentOne-aid/.classpath
@@ -28,6 +28,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -37,5 +38,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/edu.ccri.lesson04.assignment.core.5.03.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Lenovo ThinkPad T430/eclipse-workspace/ProgrammingAssignmentOne-aid/libs/edu.ccri.lesson04.assignment.core.5.03.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
