--- a/ProgrammingAssignmentOne-aid/pom.xml
+++ b/ProgrammingAssignmentOne-aid/pom.xml
@@ -21,5 +21,15 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.17.0</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi</artifactId>
+    		<version>5.2.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi-ooxml</artifactId>
+    		<version>5.2.2</version>
+		</dependency>
   	</dependencies>
 </project>
